fix:layout cut off for proposals

--- a/Frontend/src/app/modules/collections/collection-content/collection-content.component.scss
+++ b/Frontend/src/app/modules/collections/collection-content/collection-content.component.scss
@@ -21,7 +21,11 @@
     float: left;
     width: 100%;
 }
-
+es-collection-proposals {
+    display: block;
+    width: 100%;
+    padding-bottom: 10px;
+}
 .collection-nocontent-big {
     font-size: $fontSizeLarge;
     color: $textMain;
